add group member2

--- a/proposal.html
+++ b/proposal.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
 
 <div id="the-group-members-names-and-unis" class="section level2">
 <h2>The group members (names and UNIs)</h2>
-<p>Xintong Zhao(xz3499)</p>
+<p>Xintong Zhao(xz3499) | Boran Zhai(bz2570)</p>
 </div>
 <div id="the-tentative-project-title" class="section level2">
 <h2>The tentative project title</h2>
