The planned analyses and visualizations 1

--- a/proposal.html
+++ b/proposal.html
@@ -286,13 +286,78 @@ $(document).ready(function () {
 </div>
 <div id="the-intended-final-products" class="section level2">
 <h2>The intended final products</h2>
+<p>(To provide practical short-video creation guidelines, such as
+recommended video duration ranges and strategies for improving viewer
+engagement and retention.)</p>
 </div>
 <div id="the-anticipated-data-sources" class="section level2">
 <h2>The anticipated data sources</h2>
 </div>
-<div id="the-planned-analyses-visualizations-coding-challenges"
+<div id="the-planned-analyses-and-visualizations"
 class="section level2">
-<h2>The planned analyses / visualizations / coding challenges</h2>
+<h2>The planned analyses and visualizations</h2>
+<div id="exploratory-data-analysis" class="section level4">
+<h4>Exploratory Data Analysis</h4>
+<ul>
+<li>Visualize the distribution of core performance metrics (completion
+rate and engagement rate) using histograms, density plots, and
+boxplots.<br/>
+<div style="margin-bottom: 10px;">
+
+</div></li>
+<li>Use scatter plots and correlation heat maps to examine relationships
+among different video characteristics and their performance
+results.</li>
+</ul>
+</div>
+<div id="regression-analysis" class="section level4">
+<h4>Regression Analysis</h4>
+<ul>
+<li>Apply multiple regression models to identify which video
+characteristics significantly influence completion rate and engagement
+rate.<br/>
+<div style="margin-bottom: 10px;">
+
+</div></li>
+<li>Interpret coefficient direction and magnitude to understand how
+content attributes affect viewer retention and interaction.</li>
+</ul>
+</div>
+<div id="group-comparison-analysis" class="section level4">
+<h4>Group Comparison Analysis</h4>
+<ul>
+<li>Compare performance across different video content categories such
+as lifestyle, sport and music.<br/>
+<div style="margin-bottom: 10px;">
+
+</div></li>
+<li>Conduct duration-based subgroup comparisons by categorizing videos
+into length intervals (e.g., &lt;15s, 15–30s, 30–60s, &gt;60s) to
+evaluate how video duration affects viewer retention and determine
+whether there is an optimal video length range that maximizes completion
+rate and engagement performance.</li>
+</ul>
+</div>
+<div id="machine-learning-prediction" class="section level4">
+<h4>Machine Learning Prediction</h4>
+<ul>
+<li>Build predictive models for completion rate using Linear Regression,
+Random Forest, and XGBoost.<br/>
+<div style="margin-bottom: 10px;">
+
+</div></li>
+<li>Evaluate and compare model performance to determine which model
+provides the most accurate predictions.<br/>
+<div style="margin-bottom: 10px;">
+
+</div></li>
+<li>visualize feature importance rankings to determine which content
+attributes contribute most strongly to viewer behavior.</li>
+</ul>
+</div>
+</div>
+<div id="coding-challenges" class="section level2">
+<h2>Coding challenges</h2>
 </div>
 <div id="the-planned-timeline" class="section level2">
 <h2>The planned timeline</h2>
