--- a/proposal.html
+++ b/proposal.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
 
 <div id="the-group-members-names-and-unis" class="section level2">
 <h2>The group members (names and UNIs)</h2>
-<p>Xintong Zhao(xz3499) | Boran Zhai(bz2570)</p>
+<p>Xintong Zhao(xz3499) | Boran Zhai(bz2570) | Yimeng Wang(yw4667)</p>
 </div>
 <div id="the-tentative-project-title" class="section level2">
 <h2>The tentative project title</h2>
@@ -322,12 +322,79 @@ current stage.</p></li>
 </div>
 <div id="the-intended-final-products" class="section level2">
 <h2>The intended final products</h2>
-<p>(To provide practical short-video creation guidelines, such as
-recommended video duration ranges and strategies for improving viewer
-engagement and retention.)</p>
+<p>Our final deliverable will be an interactive data-driven webpage,
+designed to uncover key patterns behind short video performance across
+platforms, creators, and content types. The site will contain seven
+major analytical modules on the Home page:</p>
+<ul>
+<li><p>Exploratory Data Analysis (EDA) Visualization Panel: Interactive
+visualizations including histograms, correlation matrices, scatter
+plots, boxplots, and line charts etc, to reveal the distribution and
+relationships among core engagement metrics (e.g., completion rate,
+interaction rate, views, and duration).</p></li>
+<li><p>Regression Analysis Panel: Statistical modeling to identify key
+factors associated with video completion rate and engagement rate.
+Models such as multiple linear regression and generalized models will
+quantify how variables such as duration, platform, and category
+influence these outcomes.</p></li>
+<li><p>Group Comparison Analysis: Comparative analyses across content,
+durations or creator categories to determine how performance metrics
+differ between subgroups, visualized through grouped boxplots and
+summary tables.</p></li>
+<li><p>Machine Learning Prediction Models: Predictive modeling using
+Linear Regression, Random Forest, and XGBoost to estimate completion
+rate based on content and creator attributes. Feature importance charts
+will highlight which factors most strongly drive engagement and
+retention.</p></li>
+<li><p>Practical Recommendations Module: A synthesis of findings
+providing actionable insights for content creators and marketers — for
+example, suggesting optimal video durations, category strategies, or
+engagement-enhancing practices based on the data-driven
+evidence.</p></li>
+</ul>
+<p>Each section will include visual outputs (ggplot2, plotly, and
+leaflet etc.), model summaries, and interpretations or comments, with
+all materials hosted as a collaborative GitHub-based website. The
+written report and a 2-minute screencast will summarize key
+methodologies and recommendations.</p>
 </div>
 <div id="the-anticipated-data-sources" class="section level2">
 <h2>The anticipated data sources</h2>
+<p>The project will rely on a multi-dimensional dataset about social
+media trend data for 2025 from <a
+href="https://www.kaggle.com/datasets/tarekmasryo/youtube-shorts-and-tiktok-trends-2025">kaggle
+website</a>. These data files are already provided and include:</p>
+<ul>
+<li><p><code>country_platform_summary_2025.csv</code>: Country-level
+performance metrics (engagement rate, reach, views, post counts) across
+platforms such as TikTok and YouTube.</p></li>
+<li><p><code>monthly_trends_2025.csv</code>: Monthly-level temporal
+trends capturing seasonality and growth patterns.</p></li>
+<li><p><code>top_creators_impact_2025.csv</code>: Profiles of the top
+1,000 creators with detailed performance metrics, used to model
+completion and engagement factors.</p></li>
+<li><p><code>top_hashtags_2025.csv</code>: Popular hashtags and related
+engagement trends, used for thematic and content-level
+analyses.</p></li>
+<li><p><code>DATA_DICTIONARY.csv</code>: Metadata defining variable
+meanings to ensure consistent interpretation and
+reproducibility.</p></li>
+<li><p><code>youtube_shorts_tiktok_trends_2025.csv</code>: Comprehensive
+raw dataset containing creator-level performance data across platforms,
+regions, and content categories with detailed engagement metrics,
+traffic sources, device distributions, and temporal posting
+patterns.</p></li>
+<li><p><code>youtube_shorts_tiktok_trends_2025.csv_ML.csv</code>:
+Machine learning-ready processed dataset with engineered features,
+encoded categorical variables, and normalized metrics optimized for
+predictive modeling and algorithm training.</p></li>
+</ul>
+<p>All files are structured in <code>.csv</code> format and will be
+processed in R using packages such as <code>tidyverse</code>,
+<code>dplyr</code>, <code>ggplot2</code>, <code>plotly</code>. The
+combination of geographic, temporal, and creator-level data enables both
+statistical inference and machine learning modeling to understand and
+predict short video performance on different platforms.</p>
 </div>
 <div id="the-planned-analyses-and-visualizations"
 class="section level2">
