--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-11-06" />
+<meta name="date" content="2025-12-01" />
 
 <title>Home</title>
 
@@ -254,6 +254,9 @@ $(document).ready(function () {
   <a href="proposal.html">Proposal</a>
 </li>
 <li>
+  <a href="regression_analysis.html">Regression</a>
+</li>
+<li>
   <a href="https://github.com/XintongZhao06">
     <span class="fa fa-github fa-lg"></span>
      
@@ -269,7 +272,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Home</h1>
-<h4 class="date">2025-11-06</h4>
+<h4 class="date">2025-12-01</h4>
 
 </div>
 
