--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@ $(document).ready(function () {
 
 <p>This is our <strong><a
 href="proposal.html">proposal</a></strong>.</p>
+<p>This is <strong><a
+href="regression_analysis.html">Regression</a></strong>.</p>
 
 
 
