--- a/data_selection.html
+++ b/data_selection.html
@@ -10,9 +10,9 @@
 
 
 
-<meta name="date" content="2025-12-02" />
+<meta name="date" content="2025-11-24" />
 
-<title>Home</title>
+<title>Untitled</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -289,16 +289,29 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Home</h1>
-<h4 class="date">2025-12-02</h4>
+<h1 class="title toc-ignore">Untitled</h1>
+<h4 class="date">2025-11-24</h4>
 
 </div>
 
 
-<p>This is our <strong><a
-href="proposal.html">proposal</a></strong>.</p>
-<p>This is <strong><a
-href="regression_analysis.html">Regression</a></strong>.</p>
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## ── Attaching core tidyverse packages ──────────────────────────────────────────── tidyverse 2.0.0 ──
+## ✔ dplyr     1.1.4     ✔ readr     2.1.5
+## ✔ forcats   1.0.0     ✔ stringr   1.5.1
+## ✔ ggplot2   3.5.2     ✔ tibble    3.3.0
+## ✔ lubridate 1.9.4     ✔ tidyr     1.3.1
+## ✔ purrr     1.1.0     
+## ── Conflicts ────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()
+## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
+<pre class="r"><code>df &lt;- read.csv(&quot;./data/youtube_shorts_tiktok_trends_2025.csv&quot;)
+df_1 &lt;- df %&gt;%
+  select(platform, duration_sec, title_length, has_emoji, language, category, upload_hour, is_weekend,
+         publish_dayofweek, year_month, creator_avg_views, creator_tier, views, 
+         engagement_per_1k, likes, comments, shares, saves, completion_rate)</code></pre>
+<pre class="r"><code>write.csv(df_1, &quot;./data/df_1.csv&quot;, row.names = FALSE)</code></pre>
 
 
 
