--- a/proposal.html
+++ b/proposal.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-11-06" />
+<meta name="date" content="2025-12-02" />
 
 <title>Proposal</title>
 
@@ -251,7 +251,28 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="proposal.html">Proposal</a>
+  <a href="data.html">Data</a>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Topic 1
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="topic1_eda.html">EDA</a>
+    </li>
+    <li>
+      <a href="regression_analysis.html">Regression Analysis</a>
+    </li>
+  </ul>
+</li>
+<li>
+  <a href="topic2.html">Topic 2</a>
+</li>
+<li>
+  <a href="report.html">Report</a>
 </li>
 <li>
   <a href="https://github.com/XintongZhao06">
@@ -269,7 +290,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Proposal</h1>
-<h4 class="date">2025-11-06</h4>
+<h4 class="date">2025-12-02</h4>
 
 </div>
 
