--- a/report.html
+++ b/report.html
@@ -10,9 +10,8 @@
 
 
 
-<meta name="date" content="2025-12-02" />
 
-<title>Home</title>
+<title>report.knit</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -289,16 +288,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Home</h1>
-<h4 class="date">2025-12-02</h4>
 
 </div>
 
 
-<p>This is our <strong><a
-href="proposal.html">proposal</a></strong>.</p>
-<p>This is <strong><a
-href="regression_analysis.html">Regression</a></strong>.</p>
+<p>{ {;;} {*;;} }</p>
 
 
 
