--- a/data.html
+++ b/data.html
@@ -260,7 +260,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="topic1_eda.html">EDA</a>
+      <a href="topic1.html">EDA</a>
     </li>
     <li>
       <a href="regression_analysis.html">Regression Analysis</a>
