--- a/regression_analysis.html
+++ b/regression_analysis.html
@@ -344,7 +344,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="topic1_eda.html">EDA</a>
+      <a href="topic1.html">EDA</a>
     </li>
     <li>
       <a href="regression_analysis.html">Regression Analysis</a>
@@ -444,38 +444,13 @@ df = shorts_data |&gt;
     
   ) |&gt; 
   drop_na()</code></pre>
-<div id="distribution-of-outcome-completion-rate"
-class="section level3">
-<h3>2.1 Distribution of Outcome (completion rate)</h3>
-<p>Before fitting models, we inspect the distribution of the target
-variable (<em>completion_rate</em>). This helps assess skewness and
-understand the modeling target’s general behavior.</p>
-<pre class="r"><code># Distribution of outcome variable (completion_rate)
-completion_rate_plot &lt;- ggplot(df, aes(x = completion_rate)) +
-  geom_histogram(bins = 30, fill = &quot;#9E9AC8&quot;, alpha = 0.8, 
-                 color = &quot;#54278F&quot;, size = 0.4) +
-  geom_vline(aes(xintercept = mean(completion_rate)), 
-             color = &quot;#E6550D&quot;, linetype = &quot;dashed&quot;, size = 1) +
-  labs(title = &quot;Distribution of Completion Rate&quot;,
-       x = &quot;Completion Rate&quot;, 
-       y = &quot;Frequency&quot;) +
-  theme_minimal() +
-  theme(plot.title = element_text(hjust = 0.5, face = &quot;bold&quot;, size = 14))</code></pre>
-<pre><code>## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
-## ℹ Please use `linewidth` instead.
-## This warning is displayed once every 8 hours.
-## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was generated.</code></pre>
-<pre class="r"><code>print(completion_rate_plot)</code></pre>
-<p><img src="regression_analysis_files/figure-html/unnamed-chunk-2-1.png" width="672" /></p>
-<p>The distribution of completion_rate is roughly centered around
-0.6–0.7 with no extreme skewness or heavy tails. Although the shape is
-not perfectly symmetric, it does not exhibit severe outliers or
-truncation.</p>
-Therefore, no additional transformation or preprocessing of the outcome
-variable is required before fitting the regression models.
+<p>Our response variable is <strong>completion_rate</strong>, which
+exhibits neither strong skewness nor heavy tails, as shown in the <a
+href="topic1_eda.html#completion-dist">EDA section</a>. Therefore, no
+additional transformation or preprocessing of the outcome variable is
+needed before fitting the regression models.</p>
 <div style="margin-bottom: 10px;">
 
-</div>
 </div>
 </div>
 <div id="linear-regression-analysis" class="section level2">
@@ -883,14 +858,16 @@ we evaluate standard regression diagnostics. Residual plots help assess
 linearity, homoscedasticity, and normality assumptions.</p>
 <pre class="r"><code>par(mfrow = c(2, 2))
 plot(step_back)   </code></pre>
-<p><img src="regression_analysis_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
+<p><img src="regression_analysis_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
 <pre class="r"><code>par(mfrow = c(1, 1))</code></pre>
 <p>The Residuals vs Fitted and Scale–Location plots show slight changes
 in residual spread across fitted values, indicating mild
-heteroscedasticity and some nonlinearity. The Q–Q plot displays
-noticeable tail deviations from normality. The Residuals vs Leverage
-plot shows a few moderately high-leverage points, but none appear
-strongly influential.</p>
+heteroscedasticity and some non-linearity. The Q–Q plot reveals
+noticeable deviations in the tails from a normal distribution; however,
+this is also expected because Q–Q plots become highly sensitive with
+large sample sizes and can highlight even very small departures from
+normality. The Residuals vs Leverage plot shows a few moderately
+high-leverage points, but none appear strongly influential.</p>
 Overall, the linear model remains adequate for exploratory purposes, but
 the diagnostics indicate that its assumptions are not fully satisfied
 and the linear specification may not fully capture the underlying
@@ -1011,7 +988,7 @@ train_df |&gt;
     strip.text = element_text(face = &quot;bold&quot;, size = 11),
     panel.grid.minor = element_blank()
   )</code></pre>
-<p><img src="regression_analysis_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
+<p><img src="regression_analysis_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
 This plot contrasts how three models fit the relationship between video
 duration and completion rate (with black dots as actual data and red
 curves as model fits). All models reflect the general pattern that
@@ -1102,7 +1079,7 @@ cv_df |&gt;
     panel.grid.major.x = element_blank(),
     legend.position = &quot;none&quot;
   )</code></pre>
-<p><img src="regression_analysis_files/figure-html/unnamed-chunk-12-1.png" width="672" /></p>
+<p><img src="regression_analysis_files/figure-html/unnamed-chunk-11-1.png" width="672" /></p>
 <p>The plot above shows the RMSE distribution for the Linear Model,
 Smooth GAM, and Wiggly GAM. It indicates that the Linear Model and
 Smooth GAM achieve lower and more stable prediction errors, while the
