topic 1: add link

--- a/regression_analysis.html
+++ b/regression_analysis.html
@@ -446,7 +446,7 @@ df = shorts_data |&gt;
   drop_na()</code></pre>
 <p>Our response variable is <strong>completion_rate</strong>, which
 exhibits neither strong skewness nor heavy tails, as shown in the <a
-href="topic1_eda.html#completion-dist">EDA section</a>. Therefore, no
+href="topic1.html#completion-dist">EDA section</a>. Therefore, no
 additional transformation or preprocessing of the outcome variable is
 needed before fitting the regression models.</p>
 <div style="margin-bottom: 10px;">
