--- a/regression_analysis.html
+++ b/regression_analysis.html
@@ -385,8 +385,8 @@ div.tocify {
 </div>
 
 
-<div id="overview-of-modeling-approach" class="section level2">
-<h2>1. Overview of Modeling Approach</h2>
+<div id="introduction" class="section level2">
+<h2>1. Introduction</h2>
 <p>This section explores how <strong>completion rate</strong> relates to
 different characteristics of short-form videos. Our goal is not to build
 a predictive model or establish causal relationships, but rather to
@@ -716,15 +716,17 @@ removing weaker or redundant features.</p>
 <summary>
 <strong>Show Regression Equation</strong>
 </summary>
-<p><span class="math display">\[
-\hat{\text{completion_rate}} =
-0.6638
-- 0.0007932\,*\text{duration_sec}
-+ 0.008618\,*\log(\text{likes}+1)
-+ 0.002520\,*\log(\text{saves}+1)
-- 0.008323\,*\log(\text{creator_avg_views}+1)
-+ 0.02303\,*\text{has_emoji}
-\]</span></p>
+<span class="math display">\[
+\begin{aligned}
+\widehat{\text{completion_rate}}_i
+&amp;= \ 0.6638
+- 0.0007932 \,*\text{duration_sec}_i
++ 0.008618 *\log(\text{likes}_i + 1) \\
+&amp;\quad + 0.002520 *\log(\text{saves}_i + 1)
+- 0.008323 *\log(\text{creator_avg_views}_i + 1) \\
+&amp;\quad + 0.02303\, *\text{has_emoji}_i .
+\end{aligned}
+\]</span>
 </details>
 <div style="margin-bottom: 10px;">
 
@@ -824,6 +826,10 @@ Stepwise
 </tr>
 </tbody>
 </table>
+<p>The three linear models show small but incremental improvements in
+fit as additional predictors are added. The baseline model has an
+R-squared of 0.0183, while the engagement model increases it slightly to
+0.0308. The stepwise model achieves the highest R-squared at 0.0411.</p>
 <p>Although the models include timing features, engagement indicators,
 and creator-level metadata, all three linear specifications produce
 relatively low R-squared. This is expected in real short-form video
@@ -850,9 +856,8 @@ diagnostic assessment.
 
 </div>
 </div>
-<div id="diagnostic-checks-for-the-stepwise-linear-model"
-class="section level3">
-<h3>3.6 Diagnostic Checks for the Stepwise Linear Model</h3>
+<div id="regression-diagnostics" class="section level3">
+<h3>3.6 Regression Diagnostics</h3>
 <p>To ensure the validity of inference from the selected linear model,
 we evaluate standard regression diagnostics. Residual plots help assess
 linearity, homoscedasticity, and normality assumptions.</p>
