--- a/data.html
+++ b/data.html
@@ -11,7 +11,7 @@
 
 
 
-<title>data.knit</title>
+<title>Dataset Introduction</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -29,7 +29,11 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
+<script src="site_libs/jqueryui-1.13.2/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-6.5.2/css/all.min.css" rel="stylesheet" />
@@ -218,7 +222,73 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
+
+
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
 
 
 
@@ -228,6 +298,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -286,16 +366,110 @@ $(document).ready(function () {
 
 <div id="header">
 
+<div class="btn-group pull-right float-right">
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
 
 
+
+<h1 class="title toc-ignore">Dataset Introduction</h1>
 
 </div>
 
 
-<p>{ {;;} {*;;} }</p>
+<div id="dataset-overview" class="section level2">
+<h2>1. Dataset Overview</h2>
+<p>This dataset captures <strong>short-form video performance</strong>
+across <strong>YouTube Shorts</strong> and <strong>TikTok</strong>
+platforms during 2025. It contains over 50,000 video records designed
+for analysis of engagement dynamics, cultural patterns, and content
+trends in the short-form video landscape.</p>
+<p><strong>Key Characteristics:</strong></p>
+<ul>
+<li><p><strong>Time Period:</strong> 2025 (Jan-Aug, with synthetic dates
+clipped to 2025-09-12)</p></li>
+<li><p><strong>Platforms:</strong> TikTok and YouTube Shorts</p></li>
+<li><p><strong>Records:</strong> ~48,000-50,000 videos</p></li>
+<li><p><strong>Geography:</strong> Global coverage with country-level
+granularity (ISO-2 codes)</p></li>
+<li><p><strong>Languages:</strong> Multiple, with English as
+fallback</p></li>
+<li><p><strong>Features:</strong> 58 columns in raw format, 32 in
+ML-ready format</p></li>
+</ul>
+</div>
+<div id="available-files" class="section level2">
+<h2>2. Available Files</h2>
+<table>
+<colgroup>
+<col width="17%" />
+<col width="37%" />
+<col width="20%" />
+<col width="25%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>File</th>
+<th>Description</th>
+<th>Shape</th>
+<th>Purpose</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>youtube_shorts_tiktok_trends_2025.csv</code></td>
+<td>Raw video-level data</td>
+<td>~48k × 58</td>
+<td>Comprehensive analysis</td>
+</tr>
+<tr class="even">
+<td><code>youtube_shorts_tiktok_trends_2025_ml.csv</code></td>
+<td>ML-ready cleaned version</td>
+<td>~50k × 32</td>
+<td>Machine learning modeling</td>
+</tr>
+<tr class="odd">
+<td><code>monthly_trends_2025.csv</code></td>
+<td>Monthly aggregates</td>
+<td>~480 × 8</td>
+<td>Time-series analysis</td>
+</tr>
+<tr class="even">
+<td><code>country_platform_summary_2025.csv</code></td>
+<td>Country × platform summaries</td>
+<td>~60 × 14</td>
+<td>Regional comparisons</td>
+</tr>
+<tr class="odd">
+<td><code>top_hashtags_2025.csv</code></td>
+<td>Trending hashtags ranking</td>
+<td>~82 × 18</td>
+<td>Content trend analysis</td>
+</tr>
+<tr class="even">
+<td><code>top_creators_impact_2025.csv</code></td>
+<td>Creator-level metrics</td>
+<td>~1,000 × 20</td>
+<td>Influencer analysis</td>
+</tr>
+<tr class="odd">
+<td><code>DATA_DICTIONARY.csv</code></td>
+<td>Column definitions</td>
+<td>~58 × 2</td>
+<td>Feature reference</td>
+</tr>
+</tbody>
+</table>
+</div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -327,7 +501,41 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
+<script>
+$(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
