report zxt part

--- a/data.html
+++ b/data.html
@@ -383,6 +383,8 @@ div.tocify {
 
 <div id="dataset-overview" class="section level2">
 <h2>1. Dataset Overview</h2>
+<p><strong>DATA URL</strong>: <a
+href="https://www.kaggle.com/datasets/tarekmasryo/youtube-shorts-and-tiktok-trends-2025">Kaggle</a></p>
 <p>This dataset captures <strong>short-form video performance</strong>
 across <strong>YouTube Shorts</strong> and <strong>TikTok</strong>
 platforms during 2025. It contains over 50,000 video records designed
@@ -393,7 +395,7 @@ trends in the short-form video landscape.</p>
 <li><p><strong>Time Period:</strong> 2025 (Jan-Aug, with synthetic dates
 clipped to 2025-09-12)</p></li>
 <li><p><strong>Platforms:</strong> TikTok and YouTube Shorts</p></li>
-<li><p><strong>Records:</strong> ~48,000-50,000 videos</p></li>
+<li><p><strong>Records:</strong> over 50,000 videos</p></li>
 <li><p><strong>Geography:</strong> Global coverage with country-level
 granularity (ISO-2 codes)</p></li>
 <li><p><strong>Languages:</strong> Multiple, with English as
@@ -464,6 +466,7 @@ ML-ready format</p></li>
 </tr>
 </tbody>
 </table>
+<p><a href="topic1.html">Next: Completion Rate EDA →</a></p>
 </div>
 
 
