--- a/regression_analysis.html
+++ b/regression_analysis.html
@@ -1091,6 +1091,7 @@ Smooth GAM achieve lower and more stable prediction errors, while the
 Wiggly GAM shows higher and more variable RMSE values. Overall, the
 Linear Model and Smooth GAM generalize better than the Wiggly GAM, both
 in accuracy and stability.</p>
+<p><a href="topic2.html">Next: Trend Prediction →</a></p>
 </div>
 </div>
 
