--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Short Video Analysis Platform - Data mining project analyzing TikTok and YouTube Shorts">
+    <meta name="keywords" content="data analysis, short video, TikTok, YouTube Shorts, machine learning">
+    <meta property="og:title" content="Short Video Analysis Platform">
+    <meta property="og:description" content="Decoding Short Video Success with Data Science">
+    <meta property="og:image" content="https://yourusername.github.io/your-repo/images/og-image.jpg">
+    <meta property="og:url" content="https://yourusername.github.io/your-repo/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Short Video Analysis Platform</title>
