--- a/topic1.html
+++ b/topic1.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -923,7 +923,7 @@ values. This suggests that while overall averages are comparable, the
 potential for high engagement virality might be structurally different
 between the platforms, with TikTok facilitating more extreme “outlier”
 engagement events.</p>
-<p><a href="regression_analysis.html">Next: Regression Analysis
+<p><a href="regression_analysis.html">Next: Completion Rate Analysis
 →</a></p>
 </div>
 
